Refactor to addopt pnc-api changes.